[package]
name = "bpci"
description = "Binomial proportion confidence intervals"
version = "0.0.0"
edition = "2021"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eigenein/bpci"
license = "MIT"
keywords = ["statistics", "data-analysis", "proportion", "binomial", "interval"]
categories = ["mathematics", "science", "algorithms"]

[features]
default = []

[dependencies]
num-traits = "0.2.15"
thiserror = "1.0.31"

[dev-dependencies]
approx = "0.5.1"
